--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,14 @@ a{
 }
 
 .slide_text {
-    height: 100%;
+    position: absolute;
+    height: 90%;
     display: flex;
     justify-content: left;
     align-items: center;
     color: #ffffff;
     padding: 0em 5em;
+    z-index: 10 ;
 }
 
 .slide_text button, .first_line button{
@@ -132,7 +134,18 @@ a{
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    width: 100%;
+    width: 10%;
+    z-index: 1;
+}
+
+.slide_btn_next {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 7%;
+    margin-left: 93%;
     z-index: 1;
 }
 
@@ -179,7 +192,7 @@ a{
     display: none;
 }
 
-.slide_btn button{
+.slide_btn button, .slide_btn_next button{
     background: none;
     border: none;
 }
